# cppl1_q12020

./: README.md
.github/workflows/: ci.yml
course/: .clang-format  CMakeLists.txt  README.md
course/include/isometry/: isometry.hpp  matrix3.hpp  vector3.hpp
course/src/: isometry.cpp  matrix3.cpp  vector3.cpp
course/test/: CMakeLists.txt
course/test/src/: CMakeLists.txt  isometry_TEST.cc  isometry_TEST.cpp  matrix3_TEST.cc  matrix3_TEST.cpp  vector3_TEST.cc  vector3_TEST.cpp
course/utils/: fixformat.py
docker/: Dockerfile  README.md  build.sh  run.sh
